--- a/Python_DataTypes_Variables.ipynb
+++ b/Python_DataTypes_Variables.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "52397224",
    "metadata": {
     "deletable": false,
@@ -88,11 +88,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "exercise_number = 10\n",
+    "print (exercise_number)\n",
+    "\n"
    ]
   },
   {
@@ -118,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "9d0ff161",
    "metadata": {
     "deletable": false,
@@ -134,11 +145,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "number = 10\n",
+    "print (number)\n"
    ]
   },
   {
@@ -164,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "6f07e58d",
    "metadata": {
     "deletable": false,
@@ -180,10 +201,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14159\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "float_pt = 3.14159\n",
+    "print (float_pt)"
    ]
   },
   {
@@ -209,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "7fbccad3",
    "metadata": {
     "deletable": false,
@@ -225,10 +256,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "f_bool = False\n",
+    "print(f_bool)"
    ]
   },
   {
@@ -254,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "1bb7f4a7",
    "metadata": {
     "deletable": false,
@@ -270,10 +311,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning to code in Python\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "str1 = 'Learning to code in Python'\n",
+    "print (str1)\n"
    ]
   },
   {
@@ -299,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "761b7a69",
    "metadata": {
     "deletable": false,
@@ -315,12 +366,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "random_string = \"I am Batman\"  # 11 characters\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print(len(random_string))"
    ]
   },
   {
@@ -346,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "3a8d1311",
    "metadata": {
     "deletable": false,
@@ -362,12 +422,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This\n"
+     ]
+    }
+   ],
    "source": [
     "my_string = \"This is MY string!\"\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print (my_string[0:4])"
    ]
   },
   {
@@ -393,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "e0d690be",
    "metadata": {
     "deletable": false,
@@ -409,13 +478,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.5\n"
+     ]
+    }
+   ],
    "source": [
     "num = 20\n",
     "flt = 10.5\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print (num+flt)"
    ]
   },
   {
@@ -441,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "e1560b4f",
    "metadata": {
     "deletable": false,
@@ -457,13 +535,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "210.0\n"
+     ]
+    }
+   ],
    "source": [
     "num = 20\n",
     "flt = 10.5\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print (num*flt)"
    ]
   },
   {
@@ -489,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "cccfd5b6",
    "metadata": {
     "deletable": false,
@@ -505,13 +592,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "num = 20\n",
     "flt = 10.5\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print (num//flt)"
    ]
   },
   {
@@ -537,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "9ba57ac6",
    "metadata": {
     "deletable": false,
@@ -553,13 +649,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.5\n"
+     ]
+    }
+   ],
    "source": [
     "num = 20\n",
     "flt = 10.5\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print (num%flt)"
    ]
   },
   {
@@ -585,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "b9bae71f",
    "metadata": {
     "deletable": false,
@@ -601,13 +706,28 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = 5\n",
     "num2 = 10\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print(num1<num2)\n",
+    "print(num1>num2)\n",
+    "print(num1==num2)\n",
+    "print(num1!=num2)"
    ]
   },
   {
@@ -635,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "4c838653",
    "metadata": {
     "deletable": false,
@@ -651,12 +771,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = 5\n",
-    "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "num1+=10\n",
+    "print (num1)"
    ]
   },
   {
@@ -682,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "7fa9376b",
    "metadata": {
     "deletable": false,
@@ -698,7 +827,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# OR Expression\n",
     "my_bool1 = True or False\n",
@@ -710,7 +849,10 @@
     "my_bool3 = False\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print (my_bool1)\n",
+    "print (my_bool2)\n",
+    "print (not my_bool1)"
    ]
   },
   {
@@ -736,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "4464a8f8",
    "metadata": {
     "deletable": false,
@@ -752,25 +894,37 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "print('a' < 'b')  \n",
+    "print('a' < 'b')  # a comes first in the alphabet, giving it a smaller unicode value, meaning that it is less than b, which is true\n",
     "\n",
     "house = \"Gryffindor\"\n",
     "house_copy = \"Gryffindor\"\n",
     "\n",
-    "print(house == house_copy)\n",
+    "print(house == house_copy) #The two words have the same unicode value, as they are the same word, so they are equal, which is true\n",
     "\n",
     "new_house = \"Slytherin\"\n",
     "\n",
-    "print(house == new_house)\n",
+    "print(house == new_house) #Gryffindor comes before Slytherin in the dictionary, which means Slytherin has the slarger value, and they are not equal, so our statement is false\n",
     "\n",
-    "print(new_house <= house)\n",
+    "print(new_house <= house) #Gryffindor comes before Slytherin in the dictionary, so Slytherin has the greater value, so it is NOT less than or equal to Gryffindor, so our statement is false\n",
     "\n",
-    "print(new_house >= house)\n",
+    "print(new_house >= house) #Gryffindor comes before Slytherin in the dictionary, so Slytherin has the greater value, so it is greater than or equal to Gryffindor, so our statement is true\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()"
    ]
   },
   {
@@ -800,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "44f985df",
    "metadata": {
     "deletable": false,
@@ -816,13 +970,23 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batman\n"
+     ]
+    }
+   ],
    "source": [
     "first_half = \"Bat\"\n",
     "second_half = \"man\"\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "full_name = first_half + second_half\n",
+    "print (full_name)"
    ]
   },
   {
@@ -848,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "201c4eac",
    "metadata": {
     "deletable": false,
@@ -864,12 +1028,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "string1 = \"There's no i in team.\"\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print (\"eye\" in string1)"
    ]
   },
   {
@@ -895,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "da4a840a",
    "metadata": {
     "deletable": false,
@@ -911,11 +1084,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2.5, 'A string', True]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "my_list = [1, 2.5, \"A string\", True]\n",
+    "print(my_list)"
    ]
   },
   {
@@ -941,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "b4adbac0",
    "metadata": {
     "deletable": false,
@@ -957,11 +1140,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print(len(my_list))\n"
    ]
   }
  ],
@@ -981,7 +1173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
